Fix about us spacing issues

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,7 +66,19 @@ p#para.text-center {
 
 div#centerdiv {
     padding: 0 30px;
-    /*margin-top: -50px;*/
+    margin-top: -100px;
+}
+
+@media (max-width: 964px) {
+  div#centerdiv {
+    margin-top: -50px;
+  }
+}
+
+@media (max-width: 768px) {
+  div#centerdiv {
+    margin-top: -25px;
+  }
 }
 
 button.btn.btn-primary.btn-lg {
